Reload browser after compiling scripts.

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,3 +1,21 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Roboto', 'Segoe UI', Helvetica, Arial,  sans-serif;
+  background-color: #eee;
+  color: #555;
+  padding: 100px;
+}
+
+h1 {
+  font-size: 100px;
+  line-height: 1;
+  margin: 0;
+}
+
+a {
+  color: dodgerblue;
 }
